Move agent settings and the native-image recipe out of README
  README keeps what a user needs to install and run; three sections did
  not fit that. Overriding the agent instructions, restoring permission
  prompts and the Claude Code status line are changes to what the agents
  do in the image, and they now share doc/agent-settings.md, which absorbs
  doc/sandbox-claude.md whole. README points there once, from Usage, and
  from the --help text. SECURITY.md and the Containerfile comments follow
  the move.

  The native-image build is a recipe no build or test exercises, and its
  release form is undecided under the published-identity entry, so it is
  a deferred entry in doc/TODO.md with the launcher's existing image-keyed
  branches named, and two conditions: a CI native build that runs the
  launcher suite as the binary, and the release-artifact decision. The
  build.sbt comments that explain the command's exports and resource
  includes point at the entry.

  Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>